--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,81 @@
 
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="background-transparent">
+            <div class="titles">
+                <h1 class="title">blogger <span>design</span></h1>
+                <p class="title-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio perspiciatis modi ipsam ipsum quasi natus repudiandae doloremque, odit similique. Deleniti eos quo consequatur quam velit quibusdam nulla dolores reprehenderit sapiente ducimus sed, doloribus ab fuga impedit? Voluptas, deserunt iusto suscipit aliquam sint ullam magni repudiandae nesciunt, explicabo illum quos incidunt. Provident obcaecati deleniti amet sed ducimus similique sapiente veritatis omnis doloremque quos praesentium repellat et quae, optio laboriosam blanditiis? Porro!</p>
+            </div>
+        </div>
+
+    </header>
+    <main>
+      <!-- menu gauche -->
+        <section class="menu">
+            <div class="search-and-menu">
+                <div class="search-bar">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="search" name="search" id="search">
+                </div>
+                <nav class="menu">
+                    <ul class="ul-menu">
+                        <li class="li-menu"><a href="" class="link-menu">home</a></li>
+                        <li class="li-menu"><a href="" class="link-menu"></a>gallery</li>
+                        <li class="li-menu"><a href="" class="link-menu"></a>pages</li>
+                        <li class="li-menu"><a href="" class="link-menu"></a>blog</li>
+                        <li class="li-menu"><a href="" class="link-menu"></a>about</li>
+                        <li class="li-menu"><a href="" class="link-menu"></a>contact</li>
+                    </ul>
+                </nav>
+                <span>join our newsletter</span>
+                <button class="btn.menu">Subscribe Now</button>
+            </div>
+            <div class="footer-menu">
+              <div class="rond-logo">
+                <span class="b-logo">B</span>
+              </div>
+              <nav class="nav-footer">
+                <ul class="ul-nav-footer">
+                  <li class="social-networks"><a href="" class="social-networks-link">FACEBOOK</a></li>
+                  <li class="social-networks"><a href="" class="social-networks-link">TWITTER</a></li>
+                  <li class="social-networks"><a href="" class="social-networks-link">PINTEREST</a></li>
+                </ul>
+              </nav>
+            </div>
+            <!-- corp du site -->
+            <section class="section-main">
+              <div class="section-card">
+                <article class="card-img">
+                  <h2>prone to wander <em>october</em>2019</h2>
+                </article>
+                <article class="card-img">
+                  <h2><em>travel to live</em>november 2019</h2>
+                </article>
+                <article class="card-img">
+                  <h2>explore more <em>december</em>2019</h2>
+                </article>
+                <article class="card-img">
+                  <h2>make your move <em>let's go somewhere</em></h2>
+                </article>
+                <article class="card-img">
+                  <h2>enjoy your journey <em>september</em>2019</h2>
+                </article>
+                <article class="card-img">
+                  <h2><em>getting lost is not a waste of time</em></h2>
+                </article>
+              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ut blanditiis ea minus corporis veritatis necessitatibus quis laudantium, accusantium voluptate ullam dolor tenetur ipsum repellendus, assumenda dicta voluptas! Ad deserunt quos placeat deleniti accusamus est ratione consequuntur amet ut! Explicabo quasi quos distinctio obcaecati placeat. Hic, sed, sequi dolor veniam id non, vitae qui quod perferendis distinctio tempore quis. Amet similique adipisci natus nostrum, reiciendis harum ullam, sed at molestiae laudantium quia dolor doloribus voluptates dolores facere quas dignissimos, magni placeat alias expedita libero ipsa voluptas. Illum ipsam aspernatur excepturi tempora explicabo assumenda repellendus. Ipsa, porro eveniet iure aliquid magni reiciendis ratione et corporis suscipit doloremque. Repellat dolor autem tempora praesentium expedita placeat repellendus maxime saepe ipsa, eum quia iusto sapiente excepturi nesciunt non sequi necessitatibus amet quam natus earum voluptate aspernatur eaque sit! Reiciendis fuga assumenda magni quaerat autem debitis praesentium perferendis molestiae, soluta voluptatibus nostrum voluptates ratione ea quisquam dicta provident? Excepturi quod itaque et quidem deleniti culpa dicta, nam id dolorem qui at tenetur? Tempora est vero architecto doloremque, eveniet incidunt rerum voluptates eius ipsum harum aliquam laboriosam ipsa eligendi animi doloribus deserunt officiis quis ducimus veniam! Accusantium cum fugit libero sapiente nulla! In saepe aliquid repellat.</p>
+              <img src="../img/bas.jpg" alt="route">
+            </section>
+
+        </section>
+    </main>
     
 </body>
 </html>
