--- a/html/index.html
+++ b/html/index.html
@@ -29,10 +29,12 @@
         <section class="menu">
             <div class="search-and-menu">
                 <div class="search-bar">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="search" name="search" id="search">
+                    <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+                    <label for="search"><i class="fa-regular fa-star star-search"></i></label> 
+                    <input type="search" name="search" id="search" placeholder="🔍">
                 </div>
                 <nav class="nav-menu">
+                  <i class="fa-solid fa-bars"></i>
                     <ul class="ul-menu">
                         <li class="li-menu"><a href="" class="link-menu">home</a></li>
                         <li class="li-menu"><a href="" class="link-menu"></a>gallery</li>
@@ -42,24 +44,34 @@
                         <li class="li-menu"><a href="" class="link-menu"></a>contact</li>
                     </ul>
                 </nav>
-                <span>join our newsletter</span>
-                <button class="btn.menu">Subscribe Now</button>
+                <div class="newsletter">
+                  <div class="newsletter-container">
+                    <span>join our newsletter</span>
+                    <div class="icone">
+                      <div class="icon-newsletter star-newsletter"><i class="fa-solid fa-star"></i></div>
+                      <div class="icon-newsletter mail-newsletter"><i class="fa-solid fa-square-envelope"></i></div>
+                      <div class="icon-newsletter world-newsletter"><i class="fa-solid fa-globe"></i></div>
+                    </div>
+                  </div>
+                  <button class="btn-menu">Subscribe Now</button>
+                </div>
             </div>
-            <div class="footer-menu">
-              <div class="rond-logo">
-                <span class="b-logo">B</span>
+            <div class="zone-footer-menu">
+              <div class="footer-menu">
+                <div class="rond-logo">
+                  <span class="b-logo">B</span>
+                </div>
+                <nav class="nav-footer">
+                  <ul class="ul-nav-footer">
+                    <li class="social-networks"><i class="fa-solid fa-star star-footer"></i><a href="" class="social-networks-link">FACEBOOK</a></li>
+                    <li class="social-networks"><i class="fa-solid fa-star star-footer"></i><a href="" class="social-networks-link">TWITTER</a></li>
+                    <li class="social-networks"><i class="fa-solid fa-star star-footer"></i><a href="" class="social-networks-link">PINTEREST</a></li>
+                  </ul>
+                </nav>
               </div>
-              <nav class="nav-footer">
-                <ul class="ul-nav-footer">
-                  <li class="social-networks"><a href="" class="social-networks-link">FACEBOOK</a></li>
-                  <li class="social-networks"><a href="" class="social-networks-link">TWITTER</a></li>
-                  <li class="social-networks"><a href="" class="social-networks-link">PINTEREST</a></li>
-                </ul>
-              </nav>
             </div>
-            <!-- corp du site -->
-            
           </section>
+          <!-- corp du site -->
           <section class="section-main">
             <div class="section-card">
               <article class="card-img">
@@ -85,7 +97,7 @@
             <p>
               voluptas! Ad deserunt quos placeat deleniti accusamus est ratione consequuntur amet ut! Explicabo quasi quos distinctio obcaecati placeat. Hic, sed, sequi dolor veniam id non, vitae qui quod perferendis distinctio tempore quis. Amet similique adipisci natus nostrum, reiciendis harum ullam, sed at molestiae laudantium quia dolor doloribus voluptates dolores facere quas dignissimos, magni placeat alias expedita libero ipsa voluptas. Illum ipsam aspernatur excepturi tempora explicabo assumenda repellendus. Ipsa, porro eveniet.
             </p>
-            <img src="../img/bas.jpg" alt="route">
+            <img src="../img/bas.png" alt="route">
           </section>
     </main>
     
