--- a/html/index.html
+++ b/html/index.html
@@ -74,28 +74,28 @@
           <!-- corp du site -->
           <section class="section-main">
             <div class="section-card">
-              <article class="card-img">
-                <h2>prone to wander <em>october</em>2019</h2>
+              <article class="card-img card--background-img1">            
+                <h2 class="h2-card">prone to wander <strong>october</strong>2019</h2>
               </article>
-              <article class="card-img">
-                <h2><em>travel to live</em>november 2019</h2>
+              <article class="card-img card--background-img2">
+                <h2 class="h2-card"><strong>travel to live</strong>november 2019</h2>
               </article>
-              <article class="card-img">
-                <h2>explore more <em>december</em>2019</h2>
+              <article class="card-img card--background-img3">
+                <h2 class="h2-card">explore more <strong>december</strong>2019</h2>
               </article>
-              <article class="card-img">
-                <h2>make your move <em>let's go somewhere</em></h2>
+              <article class="card-img card--background-img4">
+                <h2 class="h2-card">make your move <strong>let's go somewhere</strong></h2>
               </article>
-              <article class="card-img">
-                <h2>enjoy your journey <em>september</em>2019</h2>
+              <article class="card-img card--background-img5">
+                <h2 class="h2-card">enjoy your journey <strong>september</strong>2019</h2>
               </article>
-              <article class="card-img">
-                <h2><em>getting lost is not a waste of time</em></h2>
+              <article class="card-img card--background-img6">
+                <h2 class="h2-card"><strong>getting lost is not a waste of time</strong></h2>
               </article>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At ut blanditiis ea minus corporis veritatis necessitatibus quis laudantium, accusantium voluptate ullam dolor tenetur ipsum repellendus, assumenda dicta.</p>
-            <p>
-              voluptas! Ad deserunt quos placeat deleniti accusamus est ratione consequuntur amet ut! Explicabo quasi quos distinctio obcaecati placeat. Hic, sed, sequi dolor veniam id non, vitae qui quod perferendis distinctio tempore quis. Amet similique adipisci natus nostrum, reiciendis harum ullam, sed at molestiae laudantium quia dolor doloribus voluptates dolores facere quas dignissimos, magni placeat alias expedita libero ipsa voluptas. Illum ipsam aspernatur excepturi tempora explicabo assumenda repellendus. Ipsa, porro eveniet.
+            <p class="section-main-p section-main-p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. At ut blanditiis ea minus corporis veritatis necessitatibus quis laudantium, accusantium voluptate ullam dolor tenetur ipsum repellendus, assumenda dicta.</p>
+            <p class="section-main-p section-main-p2">
+              voluptas! Ad deserunt quos placeat deleniti accusamus est ratione consequuntur amet ut! Explicabo quasi quos distinctio obcaecati placeat. Hic, sed, sequi dolor veniam id non, vitae qui quod perferendis distinctio tempore quis. Amet similique adipisci natus nostrum, 
             </p>
             <img src="../img/bas.png" alt="route">
           </section>
